--- a/warehouse/src/main/resources/application.yml
+++ b/warehouse/src/main/resources/application.yml
@@ -1,4 +1,5 @@
 
+
 logging:
   level:
     ROOT: INFO
@@ -31,5 +32,7 @@ spring:
     properties:
       hibernate:
         format_sql: true
+  application:
+    name: warehouse
 server:
   port: 8090
